Bug 464456 - Sticky keys: "Ring system bell when modifier keys are used" doesn't work on Wayland
Summary: Sticky keys: "Ring system bell when modifier keys are used" doesn't work on W...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_accessibility (other bugs)
Version First Reported In: 5.26.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gunnar Schmidt
URL:
Keywords: accessibility, wayland-only
Depends on:
Blocks: 444335
  Show dependency treegraph
 
Reported: 2023-01-18 13:58 UTC by Nicolas Fella
Modified: 2024-07-31 22:53 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-01-18 13:58:16 UTC
Follow-up from https://bugs.kde.org/show_bug.cgi?id=444335

This is a bit interesting because generally there is no "system bell" on Wayland.

Needs some thinking on how important that functionality is compared to alternative ways of indicating that sticky keys are used, like notifications or the key state applet
Comment 1 Nicolas Fella 2024-07-30 14:24:15 UTC
Git commit b1ac04179d24d6c1a4a21dc7a2a4a7a459b62ab2 by Nicolas Fella.
Committed on 30/07/2024 at 13:19.
Pushed by nicolasfella into branch 'master'.

plugins/stickykeys: Ring system bell when modifiers are used

M  +8    -0    src/plugins/stickykeys/stickykeys.cpp
M  +1    -0    src/plugins/stickykeys/stickykeys.h

https://invent.kde.org/plasma/kwin/-/commit/b1ac04179d24d6c1a4a21dc7a2a4a7a459b62ab2