plugins/stickykeys: Ring system bell when modifiers are used

BUG: 464456